# OpenGLRenderExamples

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  mesh.h  renderer.h  shader.h  window.h
include/glad/: glad.h
lib/: glfw3.lib
src/: application.cpp  glad.c  main.cpp  renderer.cpp  shader.cpp  window.cpp
